@@ -2,6 +2,7 @@ package com.flechazo.optics;
 
 import com.flechazo.optics.generated.ClassFileOptics;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.LinkedHashMap;
 
@@ -12,7 +13,7 @@ public final class Optics {
     public static <S> Map<String, Lens<S, ?>> lenses(Class<S> recordType) {
         LinkedHashMap<String, Lens<S, ?>> result = new LinkedHashMap<>();
         ClassFileOptics.lenses(recordType).forEach((name, lens) -> result.put(name, lens(lens)));
-        return Map.copyOf(result);
+        return Collections.unmodifiableMap(result);
     }
 
     public static <S> Map<String, Getter<S, ?>> getters(Class<S> recordType) {
@@ -22,7 +23,7 @@ public final class Optics {
     public static <S> Map<String, Setter<S, ?>> setters(Class<S> recordType) {
         LinkedHashMap<String, Setter<S, ?>> result = new LinkedHashMap<>();
         ClassFileOptics.setters(recordType).forEach((name, setter) -> result.put(name, setter(setter)));
-        return Map.copyOf(result);
+        return Collections.unmodifiableMap(result);
     }
 
     public static <S> Map<String, Fold<S, ?>> folds(Class<S> recordType) {
@@ -32,14 +33,14 @@ public final class Optics {
     public static <S> Map<String, Traversal<S, ?>> traversals(Class<S> recordType) {
         LinkedHashMap<String, Traversal<S, ?>> result = new LinkedHashMap<>();
         ClassFileOptics.traversals(recordType).forEach((name, traversal) -> result.put(name, traversal(traversal)));
-        return Map.copyOf(result);
+        return Collections.unmodifiableMap(result);
     }
 
     public static <S> Map<Class<? extends S>, Prism<S, ? extends S>> subtypes(
             Class<S> sealedType) {
         LinkedHashMap<Class<? extends S>, Prism<S, ? extends S>> result = new LinkedHashMap<>();
         ClassFileOptics.prisms(sealedType).forEach((type, prism) -> result.put(type, prism(prism)));
-        return Map.copyOf(result);
+        return Collections.unmodifiableMap(result);
     }
 
     @SuppressWarnings({"unchecked", "rawtypes"})
